Fix image alignment

--- a/slices/EcoSystem/EcoSystem.module.scss
+++ b/slices/EcoSystem/EcoSystem.module.scss
@@ -60,10 +60,12 @@
   }
   .image {
     display: flex;
+    justify-content: flex-end;
     width: 100%;
     @media only screen and (min-width: $media-mobile) {
       align-self: flex-end;
       margin-top: 30px;
+      width: auto;
     }
   }
 }
